[tool.poetry]
name = "manzana-health"
version = "0.1.0"
description = ""
authors = ["Edwin Zamudio <zamudio.e13@gmail.com>"]
readme = "README.md"
packages = [{ include = "manzana_health" }]

[tool.poetry.dependencies]
python = "^3.9"
duckdb = "^0.9.2"
pandas = "^2.1.3"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.2"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "manzana_health:main"
